--- a/styles/style.css
+++ b/styles/style.css
@@ -105,6 +105,36 @@
 .green{
     color: #16D887;
 }
+.my-plan .section-title{
+    text-align: center;
+}
+/* Previous Year Style */
+
+.my-plan-container{
+    display: flex;
+    justify-content: space-around;
+    margin: 55px 230px 135px 230px;
+}
+.my-plan-item{
+    text-align: center;
+}
+.my-plan-title{
+    color: #151414;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 18px;
+    margin-bottom: 16px;
+}
+.my-plan-des{
+    color: #737272;
+    text-align: center;
+    font-size: 25px;
+    font-weight: 500;
+    line-height: normal;
+    margin: 0;
+}
 
 
 
