--- a/styles/style.css
+++ b/styles/style.css
@@ -136,6 +136,46 @@
     margin: 0;
 }
 
+/* Call Now  Style */
+.call-now{
+    margin: 130px 230px;
+}
+.call-container{
+    position: relative;
+    display: flex;
+}
+.call-now-title{
+    color: #FFF;
+    font-size: 40px;
+    font-weight: 700;
+    margin: 0 0 24px 0;
+   /* margin-bottom: 24px;*/
+}
+.btn-secondary{
+    margin: 0;
+    font-size: 20px;
+    font-weight: 600;
+    color: #F15B22;
+    border-radius: 5px;
+    background: white;
+    border: 0;
+    padding: 20px 36px;
+}
+
+.call-now-watch{
+    position: relative;
+    z-index: 1;
+}
+.call-now-gradient{
+    position: absolute;
+    z-index: 2;
+}
+.call-now-left{
+    position: absolute;
+    z-index: 3;
+    padding: 60px 60px;
+    max-width: 50%;
+}
 
 
 
