--- a/styles/style.css
+++ b/styles/style.css
@@ -177,6 +177,76 @@
     max-width: 50%;
 }
 
+/* Footer Style */
+
+footer{
+    background: #151414;
+    display: flex;
+}
+.footer-title{
+    color: #F8F8F8;
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+.footer-des{
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px; /* 162.5% */
+    /*max-width: 484px;*/
+    margin-bottom: 24px;
+}
+
+a.footer-mail{
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 35px; /* 162.5% */
+    /*margin-bottom: 16px;*/
+    text-decoration: none;
+}
+.subscribe{
+    color: #FFF;
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+.email{
+    padding: 20px 160px 20px 20px;
+    border-radius: 8px;
+    border: 1px solid #FFF;
+    color: #ffffff;
+    background-color: #151414;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 16px;
+}
+
+.footer-left{
+    /*margin: 130px 230px;*/
+    margin-top: 130px;
+    margin-left: 230px;
+    margin-right: 0;
+    margin-bottom: 130px;
+    /*margin: 50%;*/
+}
+
+.footer-right{
+    margin-top: 130px;
+    margin-right: 230px;
+    margin-bottom: 240px;
+    margin-left: 230px;
+/*    margin: 50%;*/
+}
+.footer-left-icons{
+    margin-top: 32px;
+}
+.footer-icon{
+    margin-right: 15px;
+}
+
 
 
 
